--- a/contato.html
+++ b/contato.html
@@ -25,7 +25,7 @@
                 <h1 class="h1contato">Faça o cadastro<br>E me dê um feedback</h1>
             </div>
             <div class="container-cont">
-                <form action="obrigado.html" method="post">
+                <form action="" method="post" id="contactForm">
                     <div class="form-group">
                         <label for="name">Nome:</label>
                         <input type="text" id="name" name="name" placeholder="Nome completo" required>
